[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde_json = "1.0.114"
serde = "1.0.197"
sled = "0.34.7"
ctrlc = "3.4.4"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"
